Правильное меню и все скрипты, кроме фиксированной шапки

--- a/inner.html
+++ b/inner.html
@@ -39,72 +39,106 @@
 		Пожалуйста<a href="http://browsehappy.com/">обновите</a> его.</p>
 	<![endif]-->
 	<div class="l-wrapper">
-		<header class="b-header b-header_inner clearfix">
-			<div class="l-center">
-				<div class="l-top-header">
-					<div class="b-logo">
-						<a href="/" class="b-logo__link">
-						<img src="img/logo.png" alt="TEO" class="b-logo__img"></a>
-					</div>
-					<!-- b-logo -->
-					<div class="b-header-slogan">
-						<p>Корпоративный сайт современной компании</p>
-					</div>
-					<div class="b-header-contact">
-						<ul class="b-header-contact__list">
-							<li class="b-header-contact__item">
-								<i class="b-header-contact__email"></i>
-								<a href="mailto:mail@nvk-teo.com" class="b-header-contact__link">mail@nvk-teo.com</a>
-							</li>
-							<li class="b-header-contact__item">
-								<i class="b-header-contact__phone"></i>
-								<a href="phone:+380999999999" class="b-header-contact__link">+380-99-999-99-99</a>
-							</li>
-						</ul>
-					</div>
-					<!-- b-header-contact -->
-					<div class="b-header-contact__button">
-						<button class="button">Заказать звонок</button>
-					</div>
-					<!-- b-header-contact__button -->
-				</div>
-				<!-- l-top-header -->
-				<div class="l-middle-header clearfix">
-					<nav class="b-top-menu">
-						<ul class="b-top-menu__list">
-							<li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Компания</a></li>
-							<li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Каталог</a>
-								<ul class="b-sub-top-menu__list">
-									<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория1</a>
-										<ul class="b-sub-top-menu__list_child">
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар1</a></li>
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар2</a></li>
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар3</a></li>
-											<li class="b-sub-top-menu__item_child"><a href="" class="b-sub-top-menu__link_child">Товар4</a></li>
-										</ul>
-									</li>
-									<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория2</a></li>
-									<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория3</a></li>
-									<li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория4</a></li>
-								</ul>
-							</li>
-							<li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Услуги</a></li>
-							<li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Курсы</a></li>
-							<li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Проекты</a></li>
-							<li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Информация</a></li>
-							<li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Контакты</a></li>
-						</ul>
-					</nav>
-					<!-- b-top-menu -->
-					<div class="b-top-search">
-						<a class="b-top-search__button" href="/"></a>
-					</div>
-					<!-- b-top-search -->
-				</div>
-				<!-- l-middle-header -->
-			</div>
-			<!-- l-center -->
-		</header>
+        <header class="b-header clearfix">
+            <div class="l-center">
+                <div class="l-top-header">
+                    <div class="b-logo">
+                        <a href="/" class="b-logo__link">
+                            <img src="img/logo.png" alt="TEO" class="b-logo__img"></a>
+                    </div>
+                    <!-- b-logo -->
+                    <div class="b-header-slogan">
+                        <p>Корпоративный сайт современной компании</p>
+                    </div>
+                    <div class="b-header-contact">
+                        <ul class="b-header-contact__list">
+                            <li class="b-header-contact__item">
+                                <i class="b-header-contact__email"></i>
+                                <a href="mailto:mail@nvk-teo.com" class="b-header-contact__link">mail@nvk-teo.com</a>
+                            </li>
+                            <li class="b-header-contact__item">
+                                <i class="b-header-contact__phone"></i>
+                                <a href="phone:+380999999999" class="b-header-contact__link">+380-99-999-99-99</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- b-header-contact -->
+                    <div class="b-header-contact__button">
+                        <button class="button">Заказать звонок</button>
+                    </div>
+                    <!-- b-header-contact__button -->
+                </div>
+                <!-- l-top-header -->
+                <div class="l-middle-header clearfix">
+                    <nav class="b-top-menu">
+                        <ul class="b-top-menu__list">
+                            <li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Компания</a></li>
+                            <li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Каталог</a>
+                                <ul class="b-sub-top-menu__list">
+                                    <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория1</a>
+                                        <ul class="b-sub-top-menu__list_child">
+                                            <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар1</a></li>
+                                            <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар2</a></li>
+                                            <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар3</a></li>
+                                            <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар4</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория2</a></li>
+                                    <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория3</a></li>
+                                    <li class="b-sub-top-menu__item">
+                                        <a href="" class="b-sub-top-menu__link">Категория4</a>
+                                        <ul class="b-sub-top-menu__list_child">
+                                            <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар1</a></li>
+                                            <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар2</a></li>
+                                            <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар3</a></li>
+                                            <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар4</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="b-top-menu__item">
+                                <a href="/" class="b-top-menu__link">Услуги</a>
+                                <ul class="b-sub-top-menu__list">
+                                    <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория1</a>
+                                        <ul class="b-sub-top-menu__list_child">
+                                            <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар1</a></li>
+                                            <li class="b-sub-top-menu__item">
+                                                <a href="" class="b-sub-top-menu__link_child">Товар2</a>
+                                            </li>
+                                            <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар3</a></li>
+                                            <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link_child">Товар4</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория2</a></li>
+                                    <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория3</a></li>
+                                    <li class="b-sub-top-menu__item"><a href="" class="b-sub-top-menu__link">Категория4</a></li>
+                                </ul>
+                            </li>
+                            <li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Курсы</a></li>
+                            <li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Проекты</a></li>
+                            <li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Информация</a></li>
+                            <li class="b-top-menu__item"><a href="/" class="b-top-menu__link">Контакты</a></li>
+                        </ul>
+                    </nav>
+                    <!-- b-top-menu -->
+                    <div class="b-top-search">
+                        <a class="b-top-search__button" href="/"></a>
+                    </div>
+                    <!-- b-top-search -->
+                </div>
+                <!-- l-middle-header -->
+            </div>
+            <!-- l-center -->
+            <div class="b-search clearfix">
+                <div class="l-center">
+                    <form action="" class="b-search__form">
+                        <input type="text" class="b-search__input_text" placeholder="Запрос поиска...">
+                        <input type="submit" class="b-search__input_sub" value="Найти">
+                    </form>
+                    <a href="" class="b-search__close"></a>
+                </div>
+            </div>
+        </header>
 		<!-- b-header -->
 		<section class="b-services clearfix">
 			<div class="l-center clearfix">
@@ -119,18 +153,44 @@
 				</div>
 				<!-- b-beadcrumbs -->
 				<aside class="b-sidebar">
-					<nav class="b-sidebar-menu">
-						<ul class="b-sidebar-menu__list">
-							<li class="b-sidebar-menu__item b-sidebar-menu__item_active"><a href="" class="b-sidebar-menu__link">О компании</a></li>
-							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">История</a></li>
-							<li class="b-sidebar-menu__item b-sidebar-menu__item_active"><a href="" class="b-sidebar-menu__link">Лицензии</a></li>
-							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">Партнеры</a></li>
-							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">Отзывы клиентов</a></li>
-							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">Сотрудники</a></li>
-							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">Вакансии</a></li>
-							<li class="b-sidebar-menu__item"><a href="" class="b-sidebar-menu__link">Реквизиты</a></li>
-						</ul>
-					</nav>
+                    <nav class="b-sidebar-menu">
+                        <ul class="b-sidebar-menu__list">
+                            <li class="b-sidebar-menu__item">
+                                <a href="" class="b-sidebar-menu__link">О компании</a>
+                                <ul class="b-sidebar-sub-menu__list">
+                                    <li class="b-sidebar-sub-menu__item"><a class="b-sidebar-sub-menu__link" href="#">Пункт
+                                        1</a></li>
+                                    <li class="b-sidebar-sub-menu__item"><a class="b-sidebar-sub-menu__link" href="#">Пункт
+                                        2</a></li>
+                                    <li class="b-sidebar-sub-menu__item"><a class="b-sidebar-sub-menu__link" href="#">Пункт
+                                        3</a></li>
+                                    <li class="b-sidebar-sub-menu__item"><a class="b-sidebar-sub-menu__link" href="#">Пункт
+                                        4</a></li>
+                                </ul>
+                            </li>
+                            <li class="b-sidebar-menu__item">
+                                <a href="" class="b-sidebar-menu__link">История</a>
+                            </li>
+                            <li class="b-sidebar-menu__item">
+                                <a href="" class="b-sidebar-menu__link">Лицензии</a>
+                            </li>
+                            <li class="b-sidebar-menu__item">
+                                <a href="" class="b-sidebar-menu__link">Партнеры</a>
+                            </li>
+                            <li class="b-sidebar-menu__item">
+                                <a href="" class="b-sidebar-menu__link">Отзывы клиентов</a>
+                            </li>
+                            <li class="b-sidebar-menu__item">
+                                <a href="" class="b-sidebar-menu__link">Сотрудники</a>
+                            </li>
+                            <li class="b-sidebar-menu__item">
+                                <a href="" class="b-sidebar-menu__link">Вакансии</a>
+                            </li>
+                            <li class="b-sidebar-menu__item">
+                                <a href="" class="b-sidebar-menu__link">Реквизиты</a>
+                            </li>
+                        </ul>
+                    </nav>
 					<div class="b-sidebar-content">
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis laboriosam explicabo ipsam quibusdam impedit molestiae rem eius porro, nostrum quam, cumque dolorum quaerat alias voluptatum odio harum culpa vel.</p>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A officiis laboriosam explicabo ipsam quibusdam impedit molestiae rem eius porro, nostrum quam, cumque dolorum quaerat alias voluptatum odio harum culpa vel.</p>
@@ -207,9 +267,9 @@
 	</div>
 	<!-- b-scroll -->
 <!-- JS -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="app/bower/jquery/jquery.js"><\/script>')
-</script>
-<script src="js/main.js"></script>
+    <script src="js/jquery-2.1.4.js"></script>
+    <script src="js/slick/slick.js"></script>
+    <script src="js/slickMenu/jquery.slicknav.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
