Адаптивная верстка главной на 600

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<script src="app/bower/modernizr/modernizr.js"></script>
 	<link rel="stylesheet" href="app/bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/main.css">
+
 <!--	slider -->
 	<link rel="stylesheet" href="css/slider.css">
 	<link rel="stylesheet" href="js/slick/slick.css">
@@ -39,6 +39,8 @@
 <!--menu-->
     <link rel="stylesheet" href="js/slickMenu/slicknav.css">
 <!--end menu-->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media.css"/>
 </head>
 <body>
 	<!--[if lt IE 8]>
@@ -48,7 +50,7 @@
 	<div class="l-wrapper">
 		<header class="b-header clearfix">
 			<div class="l-center">
-				<div class="l-top-header">
+				<div class="l-top-header clearfix">
 					<div class="b-logo">
 						<a href="/" class="b-logo__link">
 						<img src="img/logo.png" alt="TEO" class="b-logo__img"></a>
