Начало адаптации внутренних inner, contact

--- a/index.html
+++ b/index.html
@@ -535,7 +535,11 @@
 		<section class="b-slider-brend clearfix">
 			<div class="l-center">
 				<ul class="b-slider-brend__list">
-					<li class="b-slider-brend__item"><a href="/" class="b-slider-brend__link"><img src="pic/brand/brand1.png" alt="brand1" class="b-slider-brend__img"></a></li>
+					<li class="b-slider-brend__item">
+                        <a href="/" class="b-slider-brend__link">
+                            <img src="pic/brand/brand1.png" alt="brand1" class="b-slider-brend__img">
+                        </a>
+                    </li>
 					<li class="b-slider-brend__item"><a href="/" class="b-slider-brend__link"><img src="pic/brand/brand2.png" alt="brand2" class="b-slider-brend__img"></a></li>
 					<li class="b-slider-brend__item"><a href="/" class="b-slider-brend__link"><img src="pic/brand/brand3.png" alt="brand3" class="b-slider-brend__img"></a></li>
 					<li class="b-slider-brend__item"><a href="/" class="b-slider-brend__link"><img src="pic/brand/brand4.jpg" alt="brand4" class="b-slider-brend__img"></a></li>
